fix: word overflow to next line

--- a/index.css
+++ b/index.css
@@ -107,11 +107,12 @@ li:before {
   grid-column-gap: 15px;
   grid-row-gap: 15px;
   font-size: inherit;
-  }
+  word-wrap: break-word;
+}
   
-  .div1 { grid-area: 1 / 1 / 3 / 2; }
-  .div3 { grid-area: 1 / 2 / 2 / 3; }
-  .div2 { grid-area: 2 / 2 / 3 / 3; }
+.div1 { grid-area: 1 / 1 / 3 / 2; }
+.div3 { grid-area: 1 / 2 / 2 / 3; }
+.div2 { grid-area: 2 / 2 / 3 / 3; }
 
 
 h5 {
